--- a/Arbeidskrav_1/index.html
+++ b/Arbeidskrav_1/index.html
@@ -2,7 +2,7 @@
 <html lang="nb">
 <head>
     <meta charset="UTF-8"> 
-    <title>Arbedidskrav 1</title> 
+    <title>Arbeidskrav 1</title> 
     <link href="style.css" rel="stylesheet"> 
 </head>
 <body>
